--- a/index.html
+++ b/index.html
@@ -13,23 +13,23 @@
 <body>
     <main>
         <h1 class="heading">Stone Paper Scissors</h1>
-        <div class="hands">
-            <div class="hands__image-container">
-                <h1>Computer</h1>
-                <img id="computer" src="./assets/scissors.png" />
+        <div class="content">
+            <div class="hands">
+                <div class="hands__image-container">
+                    <h1>Bot</h1>
+                    <img id="computer" src="./assets/scissors.png" />
+                </div>
+                <div class="hands__image-container">
+                    <h1>You</h1>
+                    <img id="user" src="./assets/stone.png" />
+                </div>
             </div>
-            <div class="hands__image-container">
-                <h1>User</h1>
-                <img id="user" src="./assets/stone.png" />
+            <h1 class="result">Result</h1>
+            <div class="input">
+                <button id="btn_stone" class="input_button"> <img src="./assets/stone.png" /></button>
+                <button id="btn_paper" class="input_button"> <img src="./assets/paper.png" /></button>
+                <button id="btn_scissors" class="input_button"> <img src="./assets/scissors.png" /></button>
             </div>
-        </div>
-        <div class="result">
-            <h1 class="result_tag">Result</h1>
-        </div>
-        <div class="input">
-            <button id="btn_stone" class="input_button"> <img src="./assets/stone.png" /></button>
-            <button id="btn_paper" class="input_button"> <img src="./assets/paper.png" /></button>
-            <button id="btn_scissors" class="input_button"> <img src="./assets/scissors.png" /></button>
         </div>
     </main>
 </body>
